scripts/nullness/annotator/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8.txt
../annotator/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/core/PieceISZ.java:16: error: [method.invocation] call to rotateNoCheck() not allowed on the given receiver.
            rotateNoCheck();
                         ^
  found   : @UnderInitialization(karlney.tetris.core.PieceISZ.class) @NonNull PieceISZ
  required: @Initialized @NonNull PieceISZ
../annotator/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/core/AbstractPiece.java:56: error: [method.invocation] call to rotateNoCheck() not allowed on the given receiver.
            rotateNoCheck();
                         ^
  found   : @UnderInitialization(karlney.tetris.core.AbstractPiece.class) @NonNull AbstractPiece
  required: @Initialized @NonNull AbstractPiece
../annotator/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/core/Player.java:18: error: [assignment] incompatible types in assignment.
    private final Thread t = new Thread(this);
                             ^
  found   : @UnderInitialization(java.lang.Thread.class) @NonNull Thread
  required: @Initialized @NonNull Thread
../annotator/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/core/Player.java:18: error: [argument] incompatible argument for parameter target of Thread constructor.
    private final Thread t = new Thread(this);
                                        ^
  found   : @UnderInitialization @NonNull Player
  required: @Initialized @Nullable Runnable
../annotator/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/core/Player.java:46: error: [method.invocation] call to updateDistribution(karlney.tetris.core.PieceType) not allowed on the given receiver.
        updateDistribution(currentPiece.getSquare(0, 0).getType());
                          ^
  found   : @UnderInitialization(karlney.tetris.core.Player.class) @NonNull Player
  required: @Initialized @NonNull Player
../annotator/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/core/Player.java:74: error: [argument] incompatible argument for parameter arg0 of Logger.error.
                log.error(e.getMessage());
                                      ^
  found   : @Initialized @Nullable String
  required: @Initialized @NonNull String
../annotator/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/swing/Highscore.java:39: error: [argument] incompatible argument for parameter name of FileInputStream constructor.
            FileInputStream reader = new FileInputStream(outputfile);
                                                         ^
  found   : @Initialized @Nullable String
  required: @Initialized @NonNull String
../annotator/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/swing/Highscore.java:85: error: [argument] incompatible argument for parameter name of FileOutputStream constructor.
            FileOutputStream writer = new FileOutputStream(outputfile);
                                                           ^
  found   : @Initialized @Nullable String
  required: @Initialized @NonNull String
../annotator/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/swing/TetrisGameSwing.java:77: error: [initialization.fields.uninitialized] the constructor does not initialize fields: game
    public TetrisGameSwing(){
           ^
../annotator/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/swing/TetrisGameSwing.java:78: error: [method.invocation] call to initGraphics() not allowed on the given receiver.
        initGraphics();
                    ^
  found   : @UnderInitialization(javax.swing.JPanel.class) @NonNull TetrisGameSwing
  required: @Initialized @NonNull TetrisGameSwing
../annotator/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/swing/TetrisGameSwing.java:79: error: [argument] incompatible argument for parameter target of Thread constructor.
        new Thread(this).start();
                   ^
  found   : @UnderInitialization(javax.swing.JPanel.class) @NonNull TetrisGameSwing
  required: @Initialized @Nullable Runnable
../annotator/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/swing/TetrisGameSwing.java:79: error: [method.invocation] call to start() not allowed on the given receiver.
        new Thread(this).start();
                              ^
  found   : @UnderInitialization(java.lang.Thread.class) @NonNull Thread
  required: @Initialized @NonNull Thread
../annotator/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/swing/TetrisGameSwing.java:80: error: [method.invocation] call to newGame() not allowed on the given receiver.
        newGame();
               ^
  found   : @UnderInitialization(javax.swing.JPanel.class) @NonNull TetrisGameSwing
  required: @Initialized @NonNull TetrisGameSwing
../annotator/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/swing/TetrisGameSwing.java:99: error: [dereference.of.nullable] dereference of possibly-null reference jf.getJMenuBar()
        jf.getJMenuBar().setBorderPainted(false);
                      ^
../annotator/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/swing/TetrisGameSwing.java:119: error: [dereference.of.nullable] dereference of possibly-null reference jf.getJMenuBar()
        jf.getJMenuBar().add(m1);
                      ^
../annotator/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/swing/TetrisGameSwing.java:120: error: [dereference.of.nullable] dereference of possibly-null reference jf.getJMenuBar()
        jf.getJMenuBar().setBackground(new Color(0,0,0));
                      ^
../annotator/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/swing/TetrisGameSwing.java:269: error: [dereference.of.nullable] dereference of possibly-null reference piece
        for(int j=0; j<piece.getSize(); j++){
                       ^
../annotator/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/ai/AIPlayer.java:69: error: [assignment] incompatible types in assignment.
            currentPiece = destinationPiece;
                           ^
  found   : @Initialized @Nullable Piece
  required: @Initialized @NonNull Piece
../annotator/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/ai/AIPlayer.java:74: error: [argument] incompatible argument for parameter arg0 of Logger.info.
                log.info(e.getMessage());
                                     ^
  found   : @Initialized @Nullable String
  required: @Initialized @NonNull String
../annotator/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/ai/AIPlayer.java:104: error: [assignment] incompatible types in assignment.
        private Thread t = new Thread(this);
                           ^
  found   : @UnderInitialization(java.lang.Thread.class) @NonNull Thread
  required: @Initialized @NonNull Thread
../annotator/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/ai/AIPlayer.java:104: error: [argument] incompatible argument for parameter target of Thread constructor.
        private Thread t = new Thread(this);
                                      ^
  found   : @Initialized @NonNull AIPlayer.@UnderInitialization @NonNull AIThread
  required: @Initialized @Nullable Runnable
21 errors
